--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,8 @@ remove_assign.
 - Minor improvement of the precision of the treatment of else
 conditions of find.
 - Improved test infrastructure: allow setting a timeout on tests.
+- Reimplemented the counting of calls to oracles in the crypto transformation,
+to make it more precise and fix two bugs.
 - Fixed bug in generation of OCaml implementations: a non-existing
 file is now considered as an empty table (reported by Benjamin Lipp).
 - Fixed bug in generation of OCaml implementations: serialization
